@@ -36,6 +36,7 @@ Imports:
     grid,
     gridGraphics,
     gridSVG,
+    installr,
     magrittr,
     moments,
     nortest,
