@@ -5,6 +5,7 @@ importFrom("grDevices", "dev.cur", "dev.list", "pdf")
 import(grid)
 import(gridGraphics)
 importFrom("gridSVG", "dev.off", "elementGrob", "textNodeGrob")
+importFrom("installr", "install.pandoc")
 import(knitr)
 import(magrittr)
 importFrom("moments", "skewness")
